force-app/main/default/objects/RW_Exhibition_Master__c/RW_Exhibition_Master__c.object-meta.xml
<CustomObject>
    <label>Exhibition Master</label>
    <nameField>
        <label>Exhibition Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>