force-app/main/default/objects/RW_Exhibition_Master__c/fields/RW_Content__c.field-meta.xml
<CustomField>
    <fullName>RW_Content__c</fullName>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>