force-app/main/default/objects/RW_Exhibition_Master__c/fields/RW_Exhibition_Master_Name1__c.field-meta.xml
<CustomField>
    <fullName>RW_Exhibition_Master_Name1__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Master Name</label>
    <type>Text</type>
</CustomField>