force-app/main/default/objects/RW_Exhibition_Master__c/fields/RW_From_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>