force-app/main/default/objects/RW_Exhibition_Master__c/fields/RW_To_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_To_Date__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>